# DOIfetch

./: .gitignore  AGENTS.md  Crossref_download.py  LICENSE  README.md  Unpaywall_download.py  config.py  convert_md.py  convertxls.py  creat_doi.py  create_doi.py  download.py  fetch.py  fetch_crossref.py  fetch_ezproxy.py  fetch_hal.py  fetch_istex.py  fetch_libgen.py  fetch_scihub.py  fetch_unpaywall.py  fetch_url.py  pdf_utils.py  pyproject.toml  readmeCH.md  sort.py  table_utils.py  utils.py  zotero.py
.claude/plans/: atomic-hugging-origami.md
.github/: copilot-instructions.md
logs/: failed_dois.csv
output/: README.md
tests/: conftest.py  test_download.py  test_fetch.py  test_fetch_ezproxy.py  test_fetch_istex.py  test_fetch_scihub.py  test_network.py  test_smoke.py  test_table_utils.py  test_utils.py  test_validate_doi.py  test_zotero.py
tickets/: .erg-assets  0001-retarget-sci-hub-fetcher-to-scidb-sci-hu.erg  0002-check-zotero-library-before-fetching-to.erg  0003-add-isbn-single-download-flag-to-fetch-p.erg  AGENTS.md  erg
tickets/closed/: 0002-check-zotero-library-before-fetching-to.erg  0003-add-isbn-single-download-flag-to-fetch-p.erg
